--- a/src/app/popup-house-card/popup-house-card.component.scss
+++ b/src/app/popup-house-card/popup-house-card.component.scss
@@ -9,14 +9,14 @@
 
 .small {
   font-size: 10px;
-  max-width: 300px;
+  max-width: 400px;
   & .info-table {
     flex-direction: column;
   }
 }
 .medium {
   font-size: 12px;
-  max-width: 400px;
+  max-width: 500px;
   & .info-table {
     flex-direction: column;
   }
